# atlas-scanner

./: README.md  install_aux_deps.sh  install_base_sensors.sh
docs/: calibration.md  software-install.md  software-run.md  sync-benchmark.md
src/: .gitignore  atlas_fusion_capture.sh  camera_hw.py  fix_livox_cmake.py  fusion_gui.py  imgui.ini  install_ptp.sh  livox_cmake.patch  run_gui.sh  run_headless.sh  setup_camera_permissions.sh  terrestrial_fusion_with_lio.sh
src/calibration/: SDK_STITCH_ERP_ALIGNMENT.md  calibrate_camera.sh  combine_scans_for_calibration.py  compose_initial_guess.py  coordinate_transform.py  extract_calibration.py  find_matches_superglue_erp.py  fix_coordinate_transform.py  fix_matches.py  generate_calibration_mask.py  generate_intensity_images.py  interactive_seed.py  manual_matches.py  physical_seed.py  pick_matches.py  seed_calib.py  tune_calibration.py  verify_calibration.py  verify_matches.py  verify_seed_overlay.py
src/capture/: buffered_camera_capture.py  buffered_odom_bridge.py  camera_keepalive.py  coverage_tracker.py  enhanced_trajectory_recorder.py  lidar_driven_capture.py  lidar_only_capture.py  sdk_photo_capture.py  shutter_event_publisher.py  single_fisheye_capture_decoded.py  single_fisheye_capture_decoded.py.bak2
src/capture/sdk/: CMakeLists.txt  build.sh  livox_time_sync.cpp  main.cpp  main.cpp.bak_takephoto  main_multi.cpp  reset_clock.cpp  stitch.cpp
src/config/: atlas_display.rviz  equirectangular_single.yaml  fastdds_atlas.xml  fastdds_camera.xml  fastdds_capture.xml  fastdds_rosbag.xml  fusion_calibration.yaml  multi_camera.yaml  phc2sys-livox.service  phc_step_to_sys.sh  phc_sync.py  ptp4l-livox.service  ptp4l_livox.cfg  rko_lio_config_continuous.yaml  rko_lio_config_robust.yaml  rviz_kiosk.qss  ts2phc_livox.cfg
src/config/calibrations/onex2/: fusion_calibration.yaml
src/config/calibrations/onex2/right/: fusion_calibration.yaml
src/config/calibrations/x3/: fusion_calibration.yaml
src/config/calibrations/x3/left/: fusion_calibration.yaml
src/config/calibrations/x5/: fusion_calibration.yaml
src/config/calibrations/x5/cam_0/: fusion_calibration.yaml
src/config/calibrations/x5/cam_1/: color_profile.npz
src/config/calibrations/x5/cam_2/: color_profile.npz
src/config/calibrations/x5/center/: fusion_calibration.yaml
src/config/camera_models/: onex2.yaml  x3.yaml  x5.yaml
src/init/: imu_transform_node.py  restart_lidar_driver.py
src/install/: display_point_cloud_ROS2.rviz  fix_dvl_calibration.sh  fix_livox_cmake.py
src/output/: calib.json
src/post_processing/: align_scan_session.py  align_scan_session_posegraph.py  apply_lidar_mask.py  backfill_cam_index.py  blend_erp_seams.py  blend_erp_seams_simple.py  clean_pointcloud.py  colmap_depth_overlay.py  colmap_pose_quality.py  colmap_viewer.py  color_normalize.py  color_with_fisheye.py  corrected_sensor_fusion.py  erp_to_perspective_colmap.py  exact_match_fusion.py  export_depth_maps.py  export_to_colmap.py  extract_fisheye_from_bag.py  extract_scans_from_bag.py  filter_blurry_scans.py  fisheye_to_erp.py  generate_colmap_depth.py  imu_sync.py  merge_trajectory_only.py  merge_with_trajectory.py  panorama_sfm_colmap.py  ply_to_e57.py  post_process_bags.py  post_process_coloring.py  reconstruct_from_bag.py  regenerate_masked_images.py  reprocess_session.py  save_e57_with_pose.py  save_ply_with_pose.py  scan_toggle_viewer.py  sdk_stitch_erp.py  sdk_sync_validator.py  sync_benchmark.py  test_tiles.py  verify_color_projection.py  (+2 more)
